// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jira getCurrentUser should forward any unknown error 1`] = `
Object {
  "message": "Some error message",
}
`;

exports[`jira getCurrentUser should get the current user 1`] = `
Object {
  "groups": Object {
    "items": Object {
      "name": "asda",
    },
  },
  "key": "Vance.Frami",
}
`;

exports[`jira getCurrentUser should have a default message if there is none 1`] = `
Object {
  "code": 404,
  "message": "Something went wrong when connecting with jira",
}
`;

exports[`jira getCurrentUser should map the jira errors 1`] = `
Object {
  "code": 404,
  "message": "There was an error",
}
`;
